--- a/src/register/register.scss
+++ b/src/register/register.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.login {
+.register {
   height: 100vh;
   width: 100vw;
   background-color: rgb(193, 190, 255);
@@ -15,6 +15,7 @@
   .card {
     width: 50%;
     display: flex;
+    flex-direction: row-reverse;
     background-color: white;
     border-radius: 10px;
     min-height: 600px;
