--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -1,84 +1,90 @@
+@import "../../style.scss";
+
 .rightBar {
-  flex: 3;
-  position: sticky;
-  top: 70px;
-  height: calc(100vh - 70px);
-  overflow: scroll;
+  @include themify($themes) {
+    flex: 3;
+    position: sticky;
+    top: 70px;
+    height: calc(100vh - 70px);
+    overflow: scroll;
+    background-color: themed("bgSoft");
 
-  &::-webkit-scrollbar {
-    display: none;
-  }
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
-  .container {
-    padding: 20px;
-
-    .item {
-      -webkit-box-shadow: -7px 10px 5px 0px rgba(242, 242, 242, 0.5);
-      -moz-box-shadow: -7px 10px 5px 0px rgba(242, 242, 242, 0.5);
-      box-shadow: -7px 10px 5px 0px rgba(242, 242, 242, 0.5);
+    .container {
       padding: 20px;
-      margin-bottom: 20px;
 
-      span {
-        color: gray;
-      }
+      .item {
+        -webkit-box-shadow: 0px 0px 15px 1px rgb(0, 0, 0, 0.09);
+        -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+        box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+        padding: 20px;
+        margin-bottom: 20px;
+        background-color: themed("bg");
 
-      .user {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 20px 0px;
+        span {
+          color: gray;
+        }
 
-        .userInfo {
+        .user {
           display: flex;
           align-items: center;
-          gap: 20px;
-          position: relative;
+          justify-content: space-between;
+          margin: 20px 0px;
 
-          img {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            object-fit: cover;
-          }
+          .userInfo {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            position: relative;
 
-          .online {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background-color: limegreen;
-            position: absolute;
-            top: 0;
-            left: 30px;
-          }
+            img {
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
 
-          p {
-            color: grey;
-          }
+            .online {
+              width: 12px;
+              height: 12px;
+              border-radius: 50%;
+              background-color: limegreen;
+              position: absolute;
+              top: 0;
+              left: 30px;
+            }
 
-          span {
-            font-weight: 500;
-            color: black;
+            p {
+              color: themed("textColorSoft");
+            }
+
+            span {
+              font-weight: 500;
+              color: themed("textColor");
+            }
           }
         }
-      }
 
-      .buttons {
-        display: flex;
-        align-items: center;
-        gap: 10px;
+        .buttons {
+          display: flex;
+          align-items: center;
+          gap: 10px;
 
-        button {
-          border: none;
-          padding: 5px;
-          color: white;
-          cursor: pointer;
+          button {
+            border: none;
+            padding: 5px;
+            color: white;
+            cursor: pointer;
 
-          &:first-child {
-            background-color: #5271ff;
-          }
-          &:last-child {
-            background-color: #f0544f;
+            &:first-child {
+              background-color: #5271ff;
+            }
+            &:last-child {
+              background-color: #f0544f;
+            }
           }
         }
       }
